# psrecord

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml  update-changelog.yaml
psrecord/: .main.py.swp  __init__.py  __main__.py  main.py  plot.py
psrecord/tests/: test_main.py
scripts/: psrecord
