[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "psrecord"
version = "1.3.dev0"
authors = [
    { name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
]
description = "Python package to record activity from processes"
readme = "README.rst"
dependencies = [
    "psutil>=5.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
plot = [
    "matplotlib",
]

[project.license]
text = "Simplified BSD License"

[project.urls]
Homepage = "https://github.com/astrofrog/psrecord"

[tool.setuptools]
zip-safe = true
provides = [
    "psrecord",
]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
