[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "psrecord/_version.py"

[project]
name = "psrecord"
dynamic = [
    "version"
]
authors = [
    { name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
]
description = "Python package to record activity from processes"
readme = "README.rst"
dependencies = [
    "psutil>=5.6",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
plot = [
    "matplotlib",
]

[project.scripts]
psrecord = "psrecord.main:main"

[project.license]
text = "Simplified BSD License"

[project.urls]
Homepage = "https://github.com/astrofrog/psrecord"

[tool.setuptools]
zip-safe = true
provides = [
    "psrecord",
]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.ruff]
lint.select = ["F", "E", "W", "I", "UP"]
line-length = 100

[tool.black]
line-length = 100
